--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Explore Css</title>
+    <style>
+        h1{
+            color:rgb(204, 112, 155)
+        }
+    </style>
 </head>
 <body>
-    
+    <h2>hello pollob</h2> 
+    <h1>i am exploring html</h1>
 </body>
 </html>
