--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explore Css</title>
-    <style>
-        h1{
-            color:rgb(204, 112, 155)
-        }
-    </style>
+  
+     
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>hello pollob</h2> 
-    <h1>i am exploring html</h1>
+    <div class="outer">
+        <div class="inner">
+           
+        </div>
+    </div>
 </body>
 </html>
