--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="outer">
-        <div class="inner">
-           
-        </div>
-    </div>
+   <div>
+       <h3 class="relative">relative</h3>
+   </div>
+
+   <div>
+       <h3 class="absolute">Absolute</h3>
+   </div>
 </body>
 </html>
