--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div>
-       <h3 class="relative">relative</h3>
-   </div>
-
-   <div>
-       <h3 class="absolute">Absolute</h3>
-   </div>
+   <div class="banner"></div>
+   <div class="header"></div>
 </body>
 </html>
