Box Model - Padding

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div class="banner"></div>
-   <div class="header"></div>
+  <h1>I like to know box modelcss</h1>
+
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et ratione vero tenetur, molestias voluptate officiis cupiditate dolores quisquam sequi nemo.</p>
 </body>
 </html>
